--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -11,7 +11,7 @@
 /*はみだすコンテンツの書き方　小さいwindow sizeのときはwidth 100%にすれば良さそう*/
 
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Ariel , system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
