--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -23,7 +23,7 @@ layout: layouts/base.njk
         // Where to grab the headings to build the table of contents.
         contentSelector: '.js-toc-content',
         // Which headings to grab inside of the contentSelector element.
-        headingSelector: 'h1, h2, h3',
+        headingSelector: 'h2, h3',
         // For headings inside relative or absolute positioned containers within content.
         hasInnerContainers: true,
         });
