--- a/src/css/post.css
+++ b/src/css/post.css
@@ -1,13 +1,31 @@
 article ul{
     list-style-type: disc;
     list-style: inside;
-    color: rgb(75 85 99);
+}
+
+article li > ul {
+    padding-left: 26px;
 }
 
 article ol{
     list-style: inside;
     list-style-type: decimal;
-    color: rgb(75 85 99);
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+ul > li::marker {
+    color: rgb(130, 136, 144);
+}
+
+ol > li::marker {
+    font-size: 24px;
+}
+
+
+ol > li{
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 article a {
@@ -17,15 +35,14 @@ article a {
 }
 
 h1 {
-    font-size: xx-large;
+    font-size: 32px;
     padding-bottom: 2rem;
     padding-top: 2rem;
 
 }
 
 h2,h3,h4 {
-    font-size: xx-large;
+    font-size: 28px;
     padding-bottom: 1rem;
     padding-top: 3rem;
-
 }
