ホームページ作成

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 ---
 <link href="/css/post.css" rel="stylesheet">
 
-<div class="fixed w-[300px] font-bold text-gray-600 border-[1px]  h-screen bg-white max-lg:hidden">
+<div class="fixed w-[300px] text-gray-900 border-[1px]  h-screen bg-white max-lg:hidden">
         <div class="mx-auto border-b-[1px] text-center py-2">Outline</div>
         <div class="js-toc top-[7.5rem] ">
         </div>
