ホームページに各ページを追加

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,7 +9,7 @@ layout: layouts/base.njk
         </div>
 </div>
 <article class="max-w-[1440px] mx-auto">
-        <div class="max-w-[560px] pt-6 mx-auto max-sm:px-3 js-toc-content" id="grid-560px">
+        <div class="max-w-[560px] pt-6 mx-auto max-sm:px-3 js-toc-content pb-8" id="grid-560px">
                 {{ content | safe }}
         </div>
 </article>
