--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -5,9 +5,11 @@ layout: layouts/base.njk
 <article class="max-w-[1440px] mx-auto">
 
     <div class="max-w-[1100px] mx-auto max-sm:px-3 max-md:text-[18px]" id="home">
-    <header class="pt-12">
+    <header class="xl:pt-12 pt-4">
         <div class="flex items-center"><h1 class="text-2xl">エイリアンズガイドTO世界</h1><img src="/img/alien.png" alt="" class="w-10"></div>
         <a href="/about">ようこそ</a>
+        <a href="/search">検索(未完成)</a>
+
     </header>
     <div class="lg:grid lg:grid-cols-3 py-20 gap-2">
         {{ content | safe }}
@@ -16,3 +18,22 @@ layout: layouts/base.njk
 
     </div>
 </article>
+
+
+<style>
+details[disabled] summary{
+pointer-events: none; /* prevents click events */
+}
+</style>
+
+<script>
+    console.log("working")
+    if(screen.width > 1280){
+            const cells = document.getElementsByTagName("details")
+            for (const cell of cells){
+                cell.toggleAttribute("open")
+                cell.toggleAttribute("disabled")
+
+            }
+    };
+</script>
