--- a/src/css/post.css
+++ b/src/css/post.css
@@ -1,6 +1,7 @@
 article ul{
     list-style-type: disc;
     list-style: inside;
+    padding-top: 8px;
 }
 
 article li > ul {
@@ -19,7 +20,7 @@ ul > li::marker {
 }
 
 ol > li::marker {
-    font-size: 24px;
+    font-size: 22px;
 }
 
 
@@ -49,4 +50,40 @@ h2,h3,h4 {
     font-size: 28px;
     padding-bottom: 1rem;
     padding-top: 3rem;
+}
+
+.dot-text { 
+    -webkit-text-emphasis: dot filled ;    
+    text-emphasis:         dot filled ;    
+}
+
+.menu
+{
+  position:fixed;
+  left:0px;
+  width:100vw;
+  background-color:rgba(255, 255, 255);
+  /* transition */
+  transition:top 0.5s;
+  -webkit-transition:top 0.5s;
+}
+
+
+@media not all and (min-width: 1240px) {
+    #side-menu
+    {
+    position:fixed;
+    top:0px;
+    height:100vh;
+    width: 300px;
+    background-color:#fff;
+    /* transition */
+    transition:right 0.3s;
+    -webkit-transition:right 0.3s;
+    }
+
+    .right-300px{
+        right: -300px;
+    }
+    
 }
