--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -31,6 +31,9 @@ details[open] > summary{
     display: block;
 }
 
+.epoem {
+    @apply xl:w-[1000px] text-[14px]
+}
 
 
 
@@ -41,18 +44,21 @@ details[open] > summary{
 
 body {
     font-family: Ariel , system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #fff;
 }
 
 
 article {
     grid-template-rows: auto 1fr;
     counter-reset: sidenote-counter definition;
+    background-color: #fff;
 }
 
 #grid-560px {
     color: #454545;
     font-size: 18px;
     line-height: 35px;
+    background-color: #fff;
 }
 
 #grid-560px  p {
@@ -119,19 +125,23 @@ details > summary::-webkit-details-marker {
 
 
 
-@media (min-width:1024px) and (max-width: 1280px){
+@media (min-width:1280px) and (max-width: 1280px){
     .sidenote,
-    .marginnote {
+    .marginnote,
+    marginnote,
+    sidenote {
     margin-right: calc(860px - 95vw - 2vw);/*- 100vw + 960px + 10vw - 5vw*/
     width: calc(100vw - 860px - 5vw);
 }
 }
 
 
-@media (min-width:1024px) {
+@media (min-width:1280px) {
 
     .sidenote,
-    .marginnote {
+    .marginnote,
+    sidenote,
+    marginnote {
     float: right;
     clear: right;
     margin-right: calc(960px - 95vw - 2vw);/*- 100vw + 960px + 10vw - 5vw*/
@@ -142,7 +152,8 @@ details > summary::-webkit-details-marker {
     font-size: 0.9rem;
     }
 
-    .sidenote {
+    .sidenote,
+    sidenote {
         margin-top: 1rem;
     }
 
@@ -155,30 +166,37 @@ details > summary::-webkit-details-marker {
 
 @media (min-width:1440px) {
     .sidenote,
-    .marginnote {
+    .marginnote,
+    sidenote,
+    marginnote {
     margin-right: calc(-386.8px);/*- 100vw + 960px + 10vw - 5vw = 436.8px*/
     width: 328px; /*もともとは408 */
     }
 
-    .marginnote.img-holder{
+    .marginnote.img-holder,
+    marginnote.img-holder{
         margin-right: calc(-436.8px);
         width: 408px;
     }
 
 }
 
-.sidenote-number {
+.sidenote-number,
+sidenote-number {
     counter-increment: sidenote-counter;
 }
 
 .sidenote-number:after,
-.sidenote:before {
+.sidenote:before,
+sidenote-number:after,
+sidenote:before {
     position: relative;
     vertical-align: baseline;
 }
 
 /* Counter before the sidenote in the margin. */
-.sidenote::before {
+.sidenote::before,
+sidenote::before {
     content: counter(sidenote-counter)".";
     position: relative;
     vertical-align: baseline;
@@ -187,16 +205,19 @@ details > summary::-webkit-details-marker {
 }
 
 
-.sidenote-number::after {
+.sidenote-number::after,
+sidenote-number::after {
     content: counter(sidenote-counter);
     vertical-align: super;
     font-size: 0.7em;
     font-weight: bold;
 }
 
-@media (max-width:1024px) {
+@media (max-width:1280px) {
     .sidenote,
-    .marginnote{
+    .marginnote,
+    sidenote,
+    marginnote {
         font-size: 0.8rem;
         display: block;
         text-align: right;
@@ -205,13 +226,15 @@ details > summary::-webkit-details-marker {
         line-height: 23px;
 
     }
-    .marginnote.img-holder{
+    .marginnote.img-holder,
+    marginnote.img-holder{
         width: 100%;
     }
     
 }
 
-.marginnote.img-holder{
+.marginnote.img-holder,
+marginnote.img-holder{
     display: flex;
     justify-content: center;
     align-items: center;
