--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -18,6 +18,11 @@ layout: layouts/base.njk
         <div class="max-w-[560px] pt-6 mx-auto max-sm:px-3 js-toc-content pb-8" id="grid-560px">
                 <img src="/img/alien.png" width="60px" alt="" srcset="" class="mb-20">
                 {{ content | safe }}
+
+                <div class="mt-12">
+                    <a href="/" class="mr-2">ホーム</a>
+                    <a href="/about">このサイトについて</a>
+                </div>
         </div>
 </article>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.min.js"></script>
