--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -7,8 +7,7 @@ layout: layouts/base.njk
     <div class="max-w-[1100px] mx-auto max-sm:px-3 max-md:text-[18px]" id="home">
     <header class="xl:pt-12 pt-4">
         <div class="flex items-center"><h1 class="text-2xl">エイリアンズガイドTO世界</h1><img src="/img/alien.png" alt="" class="w-10"></div>
-        <a href="/about">ようこそ</a>
-        <a href="/search">検索(未完成)</a>
+        <a href="/このサイトについて">このサイトについて</a>
 
     </header>
     <div class="lg:grid lg:grid-cols-3 py-20 gap-2">
