--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -8,10 +8,10 @@ table {
     @apply min-w-full border text-center
 }
 th {
-    @apply text-sm font-medium text-gray-900 px-6 py-4 border-r
+    @apply text-[15px]  text-gray-900 px-6 py-4 border-r
 }
 td {
-    @apply px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 border-r
+    @apply px-6 py-4 whitespace-nowrap text-[15px]  text-gray-900 border-r
 }
 
 tr,thead {
