--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,20 +2,20 @@
 layout: layouts/base.njk
 ---
 
-<article class="max-w-[1440px] mx-auto">
+<article class="max-w-[1440px] mx-auto xl:grid grid-cols-[600px_1fr] gap-x-4">
 
-    <div class="max-w-[1100px] mx-auto max-sm:px-3 max-md:text-[18px]" id="home">
-    <header class="xl:pt-12 pt-4">
+    <div class="max-w-full md:ml-16 mx-auto  max-sm:px-3 my-6 " id="home">
+    <header class="xl:pt-8 pt-4">
         <div class="flex items-center"><h1 class="text-2xl">エイリアンズガイドTO世界</h1><img src="/img/alien.png" alt="" class="w-10"></div>
         <a href="/このサイトについて">このサイトについて</a>
-
     </header>
-    <div class="lg:grid lg:grid-cols-3 py-20 gap-2">
+    {#...<div class="lg:grid lg:grid-cols-[1.5fr_1fr_1fr] py-20 gap-2"> #}
+        <div class="py-5">
         {{ content | safe }}
-
+        </div>
     </div>
+    <div class="h-[99vh] grid justify-end items-center max-xl:hidden"><img src="/img/DALL·E 2023-02-12 22.57.59 - Egyptian woman predicts when the flood will happen,digital art.png" alt="" class="z-0 max-h-[100vh]" ></div>
 
-    </div>
 </article>
 
 
@@ -23,16 +23,25 @@ layout: layouts/base.njk
 details[disabled] summary{
 pointer-events: none; /* prevents click events */
 }
+details{
+    padding-left: 24px;
+    margin: 0.5rem 0;
+}
+summary {
+    list-style: outside;
+}
+summary::marker {
+    content: '▶ ';
+    font-size: 1rem;
+}
+details[open] >  summary::marker{
+    content: '▼ ';
+    font-size: 1rem;
+}
+ul,ol {
+    padding-left:4px;
+    padding-top: 8px;
+}
+
+
 </style>
-
-<script>
-    console.log("working")
-    if(screen.width > 1280){
-            const cells = document.getElementsByTagName("details")
-            for (const cell of cells){
-                cell.toggleAttribute("open")
-                cell.toggleAttribute("disabled")
-
-            }
-    };
-</script>
