--- a/src/_includes/layouts/guide3.njk
+++ b/src/_includes/layouts/guide3.njk
@@ -2,10 +2,10 @@
 layout: layouts/base.njk
 ---
 
+<div class="grid grid-cols-[_] gap-x-4 ">
 
-
-  <div class="mx-auto md:w-[780px] mt-20 max-md:px-4 w-full">
-  <div class=" mr-0 ml-auto w-fit text-[15px] mb-4"><a href="/" >ホーム</a></div>
+  <div class="mx-auto md:w-[780px] mt-20 max-md:px-4 w-full text-[20px]">
+  <div class=" mr-0 ml-auto w-fit text-[15px] mb-4 "><a href="/" >ホーム</a></div>
     {{ content | safe }}
 
   <div class=" mr-0 ml-auto w-fit text-[15px] mb-4 flex gap-2">
@@ -15,7 +15,7 @@ layout: layouts/base.njk
   </div>
   </div>
 
-
+</div>
 <style>
 body {
     font-family: 'Inter', sans-serif;
@@ -23,7 +23,7 @@ body {
 }
 
 p {
-    line-height : 28px;
+    line-height : 32px;
     padding-top: 16px;
 }
 
@@ -42,7 +42,7 @@ ol {
 }
 
 h2 {
-    margin-top : 80px;
+    margin-top : 48px;
 }
 
 h2 + p {
