--- a/src/_includes/layouts/guide.njk
+++ b/src/_includes/layouts/guide.njk
@@ -6,9 +6,10 @@ layout: layouts/base.njk
 
   <div class="mx-auto md:w-[780px] mt-20 max-md:px-4 w-full">
   <div class=" mr-0 ml-auto w-fit text-[15px] mb-4"><a href="/" >ホーム</a></div>
+
     {{ content | safe }}
 
-  <div class=" mr-0 ml-auto w-fit text-[15px] mb-4 flex gap-2">
+  <div class=" mr-0 ml-auto w-fit text-[15px] mb-4 flex gap-2 mt-16">
   <a href={{previous}}>前へ</a>
   <a href="/">ホーム</a>
   <a href={{next}}>次へ</a>
