--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -16,7 +16,7 @@ layout: layouts/base.njk
 </div>
 <article class="max-w-[1440px] mx-auto" id="article">
         <div class="max-w-[560px] pt-6 mx-auto max-sm:px-3 js-toc-content pb-8" id="grid-560px">
-                <img src="/img/alien.png" width="60px" alt="" srcset="" class="mb-20">
+                <a href="/"><img src="/img/alien.png" width="60px" alt="" srcset="" class="mb-20"></a>
 
                 {% if title %}
                 <h1> {{title}}</h1>
